-fsanitize=constrained,undefined is now working!

--- a/compiler-rt/lib/cmsan/CMakeLists.txt
+++ b/compiler-rt/lib/cmsan/CMakeLists.txt
@@ -43,7 +43,7 @@ endif()
 
 set(CMSAN_DYNAMIC_DEFINITIONS
   ${CMSAN_COMMON_DEFINITIONS} CMSAN_DYNAMIC=1)
-append_list_if(WIN32 INTERCEPTION_DYNAMIC_CRT CMSAN_DYNAMIC_DEFINITIONS)
+#append_list_if(WIN32 INTERCEPTION_DYNAMIC_CRT CMSAN_DYNAMIC_DEFINITIONS)
 
 set(CMSAN_DYNAMIC_CFLAGS ${CMSAN_CFLAGS})
 append_list_if(COMPILER_RT_HAS_FTLS_MODEL_INITIAL_EXEC
@@ -63,7 +63,7 @@ if (TARGET cxx-headers OR HAVE_LIBCXX)
   set(CMSAN_DEPS cxx-headers)
 endif()
 
-# Compile ASan sources into an object library.
+# Compile CMSan sources into an object library.
 
 add_compiler_rt_object_libraries(RTCmsan_dynamic
   OS ${SANITIZER_COMMON_SUPPORTED_OS}
@@ -82,13 +82,13 @@ if(NOT APPLE)
     CFLAGS ${CMSAN_CFLAGS}
     DEFS ${CMSAN_COMMON_DEFINITIONS}
     DEPS ${CMSAN_DEPS})
-  add_compiler_rt_object_libraries(RTCmsan_cxx
-    ARCHS ${CMSAN_SUPPORTED_ARCH}
-    SOURCES ${CMSAN_CXX_SOURCES}
-    ADDITIONAL_HEADERS ${CMSAN_HEADERS}
-    CFLAGS ${CMSAN_CFLAGS}
-    DEFS ${CMSAN_COMMON_DEFINITIONS}
-    DEPS ${CMSAN_DEPS})
+#  add_compiler_rt_object_libraries(RTCmsan_cxx
+#    ARCHS ${CMSAN_SUPPORTED_ARCH}
+#    SOURCES ${CMSAN_CXX_SOURCES}
+#    ADDITIONAL_HEADERS ${CMSAN_HEADERS}
+#    CFLAGS ${CMSAN_CFLAGS}
+#    DEFS ${CMSAN_COMMON_DEFINITIONS}
+#    DEPS ${CMSAN_DEPS})
   add_compiler_rt_object_libraries(RTCmsan_preinit
     ARCHS ${CMSAN_SUPPORTED_ARCH}
     SOURCES ${CMSAN_PREINIT_SOURCES}
@@ -106,7 +106,7 @@ if(NOT APPLE)
     DEPS ${CMSAN_DEPS})
 endif()
 
-# Build ASan runtimes shipped with Clang.
+# Build CMSan runtimes shipped with Clang.
 add_compiler_rt_component(cmsan)
 
 if(APPLE)
@@ -139,7 +139,8 @@ else()
     RTSanitizerCommonLibc
     RTSanitizerCommonCoverage
     RTSanitizerCommonSymbolizer
-    RTUbsan)
+    RTUbsan
+    )
 
   add_compiler_rt_runtime(clang_rt.cmsan
     STATIC
@@ -151,19 +152,19 @@ else()
     DEFS ${CMSAN_COMMON_DEFINITIONS}
     PARENT_TARGET cmsan)
 
-  add_compiler_rt_runtime(clang_rt.cmsan_cxx
-    STATIC
-    ARCHS ${CMSAN_SUPPORTED_ARCH}
-    OBJECT_LIBS RTCmsan_cxx
-                RTUbsan_cxx
-    CFLAGS ${CMSAN_CFLAGS}
-    DEFS ${CMSAN_COMMON_DEFINITIONS}
-    PARENT_TARGET cmsan)
+#  add_compiler_rt_runtime(clang_rt.cmsan_cxx
+#    STATIC
+#    ARCHS ${CMSAN_SUPPORTED_ARCH}
+#    OBJECT_LIBS RTCmsan_cxx
+#                RTUbsan_cxx
+#    CFLAGS ${CMSAN_CFLAGS}
+#    DEFS ${CMSAN_COMMON_DEFINITIONS}
+#    PARENT_TARGET cmsan)
 
   foreach(arch ${CMSAN_SUPPORTED_ARCH})
     if (UNIX)
       add_sanitizer_rt_version_list(clang_rt.cmsan-dynamic-${arch}
-                                    LIBS clang_rt.cmsan-${arch} clang_rt.cmsan_cxx-${arch}
+                                    LIBS clang_rt.cmsan-${arch} #clang_rt.cmsan_cxx-${arch}
                                     )
       set(VERSION_SCRIPT_FLAG
            -Wl,--version-script,${CMAKE_CURRENT_BINARY_DIR}/clang_rt.cmsan-dynamic-${arch}.vers)
@@ -181,20 +182,20 @@ else()
     endif()
 
     set(CMSAN_DYNAMIC_WEAK_INTERCEPTION)
-    if (WIN32)
-      add_compiler_rt_object_libraries(CmsanWeakInterception
-        ${SANITIZER_COMMON_SUPPORTED_OS}
-        ARCHS ${arch}
-        SOURCES cmsan_win_weak_interception.cpp
-        CFLAGS ${CMSAN_CFLAGS} -DSANITIZER_DYNAMIC
-        DEFS ${CMSAN_COMMON_DEFINITIONS}
-        DEPS ${CMSAN_DEPS})
-      set(CMSAN_DYNAMIC_WEAK_INTERCEPTION
-          CmsanWeakInterception
-          UbsanWeakInterception
-          SancovWeakInterception
-          SanitizerCommonWeakInterception)
-    endif()
+#    if (WIN32)
+#      add_compiler_rt_object_libraries(CmsanWeakInterception
+#        ${SANITIZER_COMMON_SUPPORTED_OS}
+#        ARCHS ${arch}
+#        SOURCES cmsan_win_weak_interception.cpp
+#        CFLAGS ${CMSAN_CFLAGS} -DSANITIZER_DYNAMIC
+#        DEFS ${CMSAN_COMMON_DEFINITIONS}
+#        DEPS ${CMSAN_DEPS})
+#      set(CMSAN_DYNAMIC_WEAK_INTERCEPTION
+#          CmsanWeakInterception
+#          UbsanWeakInterception
+#          SancovWeakInterception
+#          SanitizerCommonWeakInterception)
+#    endif()
 
     add_compiler_rt_runtime(clang_rt.cmsan
       SHARED
@@ -217,58 +218,58 @@ else()
       PARENT_TARGET cmsan)
 
     if (SANITIZER_USE_SYMBOLS AND NOT ${arch} STREQUAL "i386")
-      add_sanitizer_rt_symbols(clang_rt.cmsan_cxx
-        ARCHS ${arch})
-      add_dependencies(cmsan clang_rt.cmsan_cxx-${arch}-symbols)
+      #add_sanitizer_rt_symbols(clang_rt.cmsan_cxx
+      #  ARCHS ${arch})
+      #add_dependencies(cmsan clang_rt.cmsan_cxx-${arch}-symbols)
       add_sanitizer_rt_symbols(clang_rt.cmsan
         ARCHS ${arch})
       add_dependencies(cmsan clang_rt.cmsan-${arch}-symbols)
     endif()
 
-    if (WIN32)
-      add_compiler_rt_object_libraries(CmsanDllThunk
-        ${SANITIZER_COMMON_SUPPORTED_OS}
-        ARCHS ${arch}
-        SOURCES # cmsan_win_dll_thunk.cpp
-        CFLAGS ${CMSAN_CFLAGS} -DSANITIZER_DLL_THUNK
-        DEFS ${CMSAN_COMMON_DEFINITIONS}
-        DEPS ${CMSAN_DEPS})
-
-      add_compiler_rt_runtime(clang_rt.cmsan_dll_thunk
-        STATIC
-        ARCHS ${arch}
-        OBJECT_LIBS CmsanDllThunk
-                    UbsanDllThunk
-                    SancovDllThunk
-                    SanitizerCommonDllThunk
-        SOURCES $<TARGET_OBJECTS:RTInterception.${arch}>
-        PARENT_TARGET cmsan)
-
-      set(DYNAMIC_RUNTIME_THUNK_CFLAGS "-DSANITIZER_DYNAMIC_RUNTIME_THUNK")
-      if(MSVC)
-        list(APPEND DYNAMIC_RUNTIME_THUNK_CFLAGS "-Zl")
-      elseif(CMAKE_C_COMPILER_ID MATCHES Clang)
-        list(APPEND DYNAMIC_RUNTIME_THUNK_CFLAGS "-nodefaultlibs")
-      endif()
-
-      add_compiler_rt_object_libraries(CmsanDynamicRuntimeThunk
-        ${SANITIZER_COMMON_SUPPORTED_OS}
-        ARCHS ${arch}
-        SOURCES # cmsan_win_dynamic_runtime_thunk.cpp
-        CFLAGS ${CMSAN_CFLAGS} ${DYNAMIC_RUNTIME_THUNK_CFLAGS}
-        DEFS ${CMSAN_COMMON_DEFINITIONS}
-        DEPS ${CMSAN_DEPS})
-
-      add_compiler_rt_runtime(clang_rt.cmsan_dynamic_runtime_thunk
-        STATIC
-        ARCHS ${arch}
-        OBJECT_LIBS CmsanDynamicRuntimeThunk
-                    UbsanDynamicRuntimeThunk
-                    SancovDynamicRuntimeThunk
-                    SanitizerCommonDynamicRuntimeThunk
-        CFLAGS ${CMSAN_CFLAGS} ${DYNAMIC_RUNTIME_THUNK_CFLAGS}
-        DEFS ${CMSAN_COMMON_DEFINITIONS}
-        PARENT_TARGET cmsan)
-    endif()
+#    if (WIN32)
+#      add_compiler_rt_object_libraries(CmsanDllThunk
+#        ${SANITIZER_COMMON_SUPPORTED_OS}
+#        ARCHS ${arch}
+#        SOURCES # cmsan_win_dll_thunk.cpp
+#        CFLAGS ${CMSAN_CFLAGS} -DSANITIZER_DLL_THUNK
+#        DEFS ${CMSAN_COMMON_DEFINITIONS}
+#        DEPS ${CMSAN_DEPS})
+#
+#      add_compiler_rt_runtime(clang_rt.cmsan_dll_thunk
+#        STATIC
+#        ARCHS ${arch}
+#        OBJECT_LIBS CmsanDllThunk
+#                    UbsanDllThunk
+#                    SancovDllThunk
+#                    SanitizerCommonDllThunk
+#        SOURCES $<TARGET_OBJECTS:RTInterception.${arch}>
+#        PARENT_TARGET cmsan)
+#
+#      set(DYNAMIC_RUNTIME_THUNK_CFLAGS "-DSANITIZER_DYNAMIC_RUNTIME_THUNK")
+#      if(MSVC)
+#        list(APPEND DYNAMIC_RUNTIME_THUNK_CFLAGS "-Zl")
+#      elseif(CMAKE_C_COMPILER_ID MATCHES Clang)
+#        list(APPEND DYNAMIC_RUNTIME_THUNK_CFLAGS "-nodefaultlibs")
+#      endif()
+#
+#      add_compiler_rt_object_libraries(CmsanDynamicRuntimeThunk
+#        ${SANITIZER_COMMON_SUPPORTED_OS}
+#        ARCHS ${arch}
+#        SOURCES # cmsan_win_dynamic_runtime_thunk.cpp
+#        CFLAGS ${CMSAN_CFLAGS} ${DYNAMIC_RUNTIME_THUNK_CFLAGS}
+#        DEFS ${CMSAN_COMMON_DEFINITIONS}
+#        DEPS ${CMSAN_DEPS})
+#
+#      add_compiler_rt_runtime(clang_rt.cmsan_dynamic_runtime_thunk
+#        STATIC
+#        ARCHS ${arch}
+#        OBJECT_LIBS CmsanDynamicRuntimeThunk
+#                    UbsanDynamicRuntimeThunk
+#                    SancovDynamicRuntimeThunk
+#                    SanitizerCommonDynamicRuntimeThunk
+#        CFLAGS ${CMSAN_CFLAGS} ${DYNAMIC_RUNTIME_THUNK_CFLAGS}
+#        DEFS ${CMSAN_COMMON_DEFINITIONS}
+#        PARENT_TARGET cmsan)
+#    endif()
   endforeach()
 endif()
